// Copyright 2019 Eryx <evorui аt gmail dοt com>, All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package iamauth;

message AuthKey {
    string access_key = 1; // struct:object_slice_key
    string secret_key = 2;
    string user = 3;
}

message UserPayload {
    string id = 1; // struct:object_slice_key
    string name = 2;
    repeated uint32 roles = 4;
    repeated string groups = 5;
    int64 expired = 9; // unix time in seconds
}

message AppPayload {
    string id = 1;
	string user = 2;
    string access_key = 3;
    int64 created = 9; // unix time in milliseconds
}

